proyeto backend terminado de forma practica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=123456
 
 # config Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+springdoc.swagger-ui.path=/swagger-ui.html
